crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-parameter_DOC102_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC102 Documented parameter `a` is not in the function's signature
 --> DOC102_google.py:7:9
  |
7 |         a (int): The first number to add.
  |         ^
  |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `multiplier` is not in the function's signature
  --> DOC102_google.py:23:9
   |
23 |         multiplier (int): The multiplier for each element in the list.
   |         ^^^^^^^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `numbers` is not in the function's signature
  --> DOC102_google.py:37:9
   |
37 |         numbers (list of int): A list of integers to search through.
   |         ^^^^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `name` is not in the function's signature
  --> DOC102_google.py:51:9
   |
51 |         name (str): The name of the user.
   |         ^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `age` is not in the function's signature
  --> DOC102_google.py:52:9
   |
52 |         age (int): The age of the user.
   |         ^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `email` is not in the function's signature
  --> DOC102_google.py:53:9
   |
53 |         email (str): The user's email address.
   |         ^^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `tax_rate` is not in the function's signature
  --> DOC102_google.py:74:9
   |
74 |         tax_rate (float): The tax rate to apply.
   |         ^^^^^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `to_address` is not in the function's signature
  --> DOC102_google.py:94:9
   |
94 |         to_address (str): The recipient's email address.
   |         ^^^^^^^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `cc_address` is not in the function's signature
  --> DOC102_google.py:95:9
   |
95 |         cc_address (str, optional): The email address for CC. Defaults to None.
   |         ^^^^^^^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `items` is not in the function's signature
   --> DOC102_google.py:126:9
    |
126 |         *items (str): Variable length argument list of items in the order.
    |         ^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `details` is not in the function's signature
   --> DOC102_google.py:127:9
    |
127 |         **details (dict): Additional details such as shipping method and address.
    |         ^^^^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `value` is not in the function's signature
   --> DOC102_google.py:150:13
    |
150 |             value (int, optional): The initial value of the calculator. Defaults to 0.
    |             ^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `number` is not in the function's signature
   --> DOC102_google.py:160:13
    |
160 |             number (int or float): The number to add to the current value.
    |             ^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `value_str` is not in the function's signature
   --> DOC102_google.py:175:13
    |
175 |             value_str (str): The string representing the initial value.
    |             ^^^^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `number` is not in the function's signature
   --> DOC102_google.py:190:13
    |
190 |             number (any): The value to check.
    |             ^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `a` is not in the function's signature
   --> DOC102_google.py:258:9
    |
258 |         a: The first number to add.
    |         ^
    |
help: Remove the extraneous parameter from the docstring
