crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-parameter_DOC102_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC102 Documented parameter `a` is not in the function's signature
 --> DOC102_numpy.py:8:5
  |
8 |     a : int
  |     ^
  |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `multiplier` is not in the function's signature
  --> DOC102_numpy.py:30:5
   |
30 |     multiplier : int
   |     ^^^^^^^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `numbers` is not in the function's signature
  --> DOC102_numpy.py:48:5
   |
48 |     numbers : list of int
   |     ^^^^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `name` is not in the function's signature
  --> DOC102_numpy.py:66:5
   |
66 |     name : str
   |     ^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `age` is not in the function's signature
  --> DOC102_numpy.py:68:5
   |
68 |     age : int
   |     ^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `email` is not in the function's signature
  --> DOC102_numpy.py:70:5
   |
70 |     email : str
   |     ^^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `tax_rate` is not in the function's signature
  --> DOC102_numpy.py:97:5
   |
97 |     tax_rate : float
   |     ^^^^^^^^
   |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `to_address` is not in the function's signature
   --> DOC102_numpy.py:124:5
    |
124 |     to_address : str
    |     ^^^^^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `cc_address` is not in the function's signature
   --> DOC102_numpy.py:126:5
    |
126 |     cc_address : str, optional
    |     ^^^^^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `items` is not in the function's signature
   --> DOC102_numpy.py:168:5
    |
168 |     *items : str
    |     ^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `details` is not in the function's signature
   --> DOC102_numpy.py:170:5
    |
170 |     **details : dict
    |     ^^^^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `value` is not in the function's signature
   --> DOC102_numpy.py:197:9
    |
197 |         value : int, optional
    |         ^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `number` is not in the function's signature
   --> DOC102_numpy.py:209:9
    |
209 |         number : int or float
    |         ^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `value_str` is not in the function's signature
   --> DOC102_numpy.py:230:9
    |
230 |         value_str : str
    |         ^^^^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `number` is not in the function's signature
   --> DOC102_numpy.py:249:9
    |
249 |         number : any
    |         ^^^^^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `a` is not in the function's signature
   --> DOC102_numpy.py:300:5
    |
300 |     a
    |     ^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `x1` is not in the function's signature
   --> DOC102_numpy.py:380:5
    |
380 |     x1, x2 : object
    |     ^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `x2` is not in the function's signature
   --> DOC102_numpy.py:380:9
    |
380 |     x1, x2 : object
    |         ^^
    |
help: Remove the extraneous parameter from the docstring

DOC102 Documented parameter `extra_param` is not in the function's signature
   --> DOC102_numpy.py:418:5
    |
418 |     extra_param : str
    |     ^^^^^^^^^^^
    |
help: Remove the extraneous parameter from the docstring
