crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-returns_DOC202_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC202 Docstring should not have a returns section because the function doesn't return anything
  --> DOC202_google.py:14:5
   |
14 | /     """
15 | |     Do something
16 | |
17 | |     Args:
18 | |         num (int): A number
19 | |
20 | |     Returns:
21 | |         str: A string
22 | |     """
   | |_______^
   |
help: Remove the "Returns" section

DOC202 Docstring should not have a returns section because the function doesn't return anything
  --> DOC202_google.py:30:9
   |
30 | /         """
31 | |         Do something
32 | |
33 | |         Args:
34 | |             num (int): A number
35 | |
36 | |         Returns:
37 | |             str: A string
38 | |         """
   | |___________^
   |
help: Remove the "Returns" section

DOC202 Docstring should not have a returns section because the function doesn't return anything
  --> DOC202_google.py:80:5
   |
80 | /     """Fooey things.
81 | |
82 | |     Returns:
83 | |         None
84 | |     """
   | |_______^
   |
help: Remove the "Returns" section
