crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-returns_DOC202_sphinx.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC202_sphinx.py:19:1: DOC202 Docstring should not have a returns section because the function doesn't return anything
   |
17 |       :param num: A number
18 |       :type num: int
19 | /     :return: A string
20 | |     :rtype: str
   | |_^ DOC202
21 |       """
22 |       print('test')
   |
   = help: Remove the "Returns" section

DOC202_sphinx.py:34:1: DOC202 Docstring should not have a returns section because the function doesn't return anything
   |
32 |           :param num: A number
33 |           :type num: int
34 | /         :return: A string
35 | |         :rtype: str
   | |_^ DOC202
36 |           """
37 |           print('test')
   |
   = help: Remove the "Returns" section
