crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-yields_DOC403_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC403 Docstring has a "Yields" section but the function doesn't yield anything
  --> DOC403_numpy.py:16:5
   |
16 | /     """
17 | |     Do something
18 | |
19 | |     Parameters
20 | |     ----------
21 | |     num : int
22 | |         A number
23 | |
24 | |     Yields
25 | |     -------
26 | |     str
27 | |         A string
28 | |     """
   | |_______^
   |
help: Remove the "Yields" section

DOC403 Docstring has a "Yields" section but the function doesn't yield anything
  --> DOC403_numpy.py:36:9
   |
36 | /         """
37 | |         Do something
38 | |
39 | |         Parameters
40 | |         ----------
41 | |         num : int
42 | |             A number
43 | |
44 | |         Yields
45 | |         -------
46 | |         str
47 | |             A string
48 | |         """
   | |___________^
   |
help: Remove the "Yields" section
